// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Default story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> Destructive story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> DestructiveLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--brand"
  href="/"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> IconLinkIconOnly story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--brand"
  href="/"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      go back
    </title>
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
</a>
`;

exports[`<Link /> IconLinkIconOnlySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand"
  href="/"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      go back
    </title>
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
</a>
`;

exports[`<Link /> IconLinkLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--brand"
  href="/"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> IconLinkLeftIconSmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand"
  href="/"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> IconLinkRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--brand"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> IconLinkRightIconSmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> LinkRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand"
  href="/"
>
  Link
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title
      id="mock-id"
    >
      opens in a new tab
    </title>
    <use
      xlink:href="test-file-stub#open-in-new"
    />
  </svg>
</a>
`;

exports[`<Link /> Primary story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> PrimaryLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand"
  href="/"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> PrimaryMedium story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--md clickable-style--primary clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> PrimaryRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> PrimarySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--primary clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> Secondary story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> SecondaryLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand"
  href="/"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> SecondaryMedium story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--md clickable-style--secondary clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> SecondaryRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> SecondarySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--secondary clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> Tertiary story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> TertiaryLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--brand"
  href="/"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-back"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> TertiaryMedium story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--md clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> TertiaryRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--brand"
  href="/"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    xmlns="http://www.w3.org/2000/svg"
  >
    <use
      xlink:href="test-file-stub#arrow-forward"
    />
  </svg>
</a>
`;

exports[`<Link /> TertiarySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--brand"
  href="/"
>
  Link
</a>
`;

exports[`<Link /> passes class names down properly 1`] = `
<a
  class="clickable-style exampleClassName clickable-style--link clickable-style--brand"
  data-testid="example-class-name"
  href="/"
>
  Click
</a>
`;

exports[`<Link /> passes test ids down properly 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand"
  data-testid="example-test-id"
  href="/"
>
  Click
</a>
`;
